implemented custom fields

--- a/ckanext/gspfdataset/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/gspfdataset/templates/package/snippets/package_basic_fields.html
@@ -1,6 +1,6 @@
 {% ckan_extends %}
 
-{# moved to metadata field
+{# moved to metadata fieldlkkk
 {% block package_basic_fields_custom %}
   {{ form.input('custom_text', label=_('Custom Text'), id='field-custom_text', placeholder=_('custom text'), value=data.custom_text, error=errors.custom_text, classes=['control-medium']) }}
 {% endblock %}
