--- a/ckanext/gspfdataset/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/gspfdataset/templates/package/snippets/package_metadata_fields.html
@@ -5,6 +5,12 @@
   {{ form.input('quality', label='データ品質', id='field-quality', placeholder='100', value=data.quality, error=errors.quality, classes=['control-medium']) }}
   {{ form.input('restriction', label='制約', id='field-restriction', placeholder='', value=data.restriction, error=errors.restriction, classes=['control-medium']) }}
   {{ form.input('created_date', label='データ作成日', id='field-created_date', placeholder='2015/10/10', value=data.created_date, error=errors.created_date, classes=['control-medium']) }}
+  {{ form.input('charge', label='有償無償区分', id='field-charge', placeholder='', value=data.charge, error=errors.charge, classes=['control-medium']) }}
+  {{ form.input('emergency', label='災害時区分', id='field-emergency', placeholder='', value=data.emergency, error=errors.emergency, classes=['control-medium']) }}
+  {{ form.input('area', label='地理的範囲', id='field-area', placeholder='', value=data.area, error=errors.area, classes=['control-medium']) }}
+  {{ form.input('thumbnail_url', label='サムネイル画像', id='field-thumbnail_url', placeholder='', value=data.thumbnail_url, error=errors.thumbnail_url, classes=['control-medium']) }}
+  {{ form.input('fee', label='価格情報', id='field-fee', placeholder='', value=data.fee, error=errors.fee, classes=['control-medium']) }}
+  {{ form.input('license_agreement', label='使用許諾', id='field-license_agreement', placeholder='', value=data.license_agreement, error=errors.license_agreement, classes=['control-medium']) }}
 
   {{ super() }}
 
