modify metadata name

--- a/ckanext/gspfdataset/templates/package/snippets/additional_info.html
+++ b/ckanext/gspfdataset/templates/package/snippets/additional_info.html
@@ -16,8 +16,8 @@
     <td class="dataset-details">{{ pkg_dict.restriction }}</td>
   </tr>
   <tr>
-    <th class="dataset-label" scope="row">データ作成日</th>
-    <td class="dataset-details">{{ pkg_dict.created_date }}</td>
+    <th class="dataset-label" scope="row">データ登録日</th>
+    <td class="dataset-details">{{ pkg_dict.registerd_date }}</td>
   </tr>
   <!--
   <tr>
