--- a/ckanext/gspfdataset/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/gspfdataset/templates/package/snippets/package_metadata_fields.html
@@ -4,7 +4,7 @@
   {{ form.input('spatial', label='Spatial', id='field-spatial', placeholder='{"type":"POINT", "coordinates":[139.701334,35.658517]}', value=data.spatial, error=errors.spatial, classes=['control-medium']) }}
   {{ form.input('quality', label='データ品質', id='field-quality', placeholder='100', value=data.quality, error=errors.quality, classes=['control-medium']) }}
   {{ form.input('restriction', label='制約', id='field-restriction', placeholder='', value=data.restriction, error=errors.restriction, classes=['control-medium']) }}
-  {{ form.input('created_date', label='データ作成日', id='field-created_date', placeholder='2015/10/10', value=data.created_date, error=errors.created_date, classes=['control-medium']) }}
+  {{ form.input('registerd_date', label='データ登録日', id='field-registerd_date', placeholder='2015/10/10', value=data.registerd_date, error=errors.registerd_date, classes=['control-medium']) }}
   {{ form.input('charge', label='有償無償区分', id='field-charge', placeholder='', value=data.charge, error=errors.charge, classes=['control-medium']) }}
   {{ form.input('emergency', label='災害時区分', id='field-emergency', placeholder='', value=data.emergency, error=errors.emergency, classes=['control-medium']) }}
   {{ form.input('area', label='地理的範囲', id='field-area', placeholder='', value=data.area, error=errors.area, classes=['control-medium']) }}
